--- a/index.html
+++ b/index.html
@@ -92,32 +92,35 @@
 			<div id="show" class="hidden justify-center p-4 transition-all">
 				<div class="flex justify-center">
 					<p
-						class="flex flex-col text-2xl justify-self-auto text-white"
+						class="flex flex-col text-4xl justify-self-auto text-white"
 						id="round"
 					>
 						Rounds
-						<span class="text-center text-black" id="spins"> 00</span>
+						<span class="text-center text-black text-4xl" id="spins"> 00</span>
 					</p>
 				</div>
-				<div class="flex justify-center">
-					<p class="py-4 text-2xl text-white" id="startTime">
-						Work
-						<span class="text-center text-black" id="seconds"> 00</span>:<span
-							class="text-black"
-							id="milli"
-							>00</span
-						>
+				<div class="flex flex-col py-4 justify-center">
+					<p class="flex justify-center text-4xl text-white" id="startTime">
+						Exercise
 					</p>
+					<div class="flex flex-row justify-center">
+						<h1
+							class="flex flex-row text-center text-black text-4xl"
+							id="seconds"
+						>
+							00
+						</h1>
+						<span class="flex justify-center text-4xl">:</span>
+						<h1 class="text-4xl text-black" id="milli">00</h1>
+					</div>
 				</div>
-				<div class="flex justify-center">
-					<p class="text-2xl text-white" id="rest">
-						Rest
-						<span class="text-center text-black" id="breathSec"> 00</span>:<span
-							class="text-black"
-							id="breathMilli"
-							>00</span
-						>
-					</p>
+				<div class="flex flex-col justify-center">
+					<p class="flex justify-center text-4xl text-white" id="rest">Rest</p>
+					<div class="flex justify-center">
+						<h1 class="text-center text-black text-4xl" id="breathSec">00</h1>
+						<span class="flex justify-center text-4xl">:</span>
+						<h1 class="text-black text-4xl" id="breathMilli">00</h1>
+					</div>
 				</div>
 
 				<div class="flex flex-row justify-between p-4">
@@ -170,6 +173,6 @@
 			</div>
 		</div>
 
-		<script src="./assets/js/script.js"></script>
+		<script src="dist/assets/js/script.js"></script>
 	</body>
 </html>
