--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			href="https://fonts.googleapis.com/css2?family=Bellefair&family=Bruno+Ace+SC&family=Concert+One&family=Electrolize&family=Great+Vibes&family=Lato:wght@100&family=Noto+Sans+Mono:wght@700&family=Noto+Serif+JP:wght@900&family=Oranienbaum&family=Playfair+Display&display=swap"
 			rel="stylesheet"
 		/>
-		<link href="/dist/output.css" rel="stylesheet" />
+		<link href="dist/output.css" rel="stylesheet" />
 	</head>
 
 	<body class="bg-gradient-to-r from-orange-500 to-red-500 max-h-screen">
